# momentum-analysis-ingestion

./: Dockerfile  Dockerfile.worker  LICENSE  README.md  deploy_market_flows.py  docker-compose.yml  pyproject.toml
Docs/: TMP.md  architecture.md
common/: config.py  database.py
database/: schema.sql
flows/: get_ticker_data.py
ingestion/: __init__.py  fetcher.py  flows.py  scheduler.py
models/: __init__.py  features.py  models.py
