[project]
name = "momentum-ops"
version = "0.1.0"
description = "Financial analytics and stock market automation for JP/KR markets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prefect>=3.6.0",
    "pandas>=2.3.3",
    "yfinance>=1.2.0",
    "sqlalchemy>=2.0.48",
    "psycopg[binary,pool]>=3.3.3", # For PostgreSQL connectivity
    "asyncpg>=0.29.0",        # Required for Prefect's async DB operations
    "streamlit>=1.55.0",      # For your dashboard
    "plotly>=6.6.0",         # For financial charts
    "pydantic-settings>=2.13.1", # For clean environment variable management
    "xgboost>=3.2.0",          # For your ML models
    "scikit-learn>=1.8.0",     # For additional ML utilities
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = false

[tool.ruff]
line-length = 88
select = ["E", "F", "I"] # Style, Errors, and Import sorting

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "common"]
