[project]
name = "momentum-ops"
version = "0.1.0"
description = "Financial analytics and stock market automation for JP/KR markets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "prefect[docker]>=3.6.23",
    "sqlalchemy>=2.0.48",
    "psycopg[binary,pool]>=3.3.3",
    "asyncpg>=0.29.0",
    "streamlit>=1.55.0",
    "plotly>=6.6.0",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
worker = [
    "yfinance>=1.2.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.8.0",
    "httpx>=0.27.0",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "numpy>=1.26.4",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = false

[tool.ruff]
line-length = 88
select = ["E", "F", "I"] # Style, Errors, and Import sorting

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "common", "models"]
